chore: use new tokens

--- a/src/components/list/z-list-element/index.stories.mdx
+++ b/src/components/list/z-list-element/index.stories.mdx
@@ -59,7 +59,7 @@ import "./index";
     expandableStyle: ExpandableListStyle.ACCORDION,
     listElementId: "0",
     size: ListSize.MEDIUM,
-    color: "color-text01",
+    color: "color-default-text",
     disabled: true,
     listElementPosition: "0",
     listType: ListType.NONE,
