--- a/src/components/z-popover/index.stories.mdx
+++ b/src/components/z-popover/index.stories.mdx
@@ -35,7 +35,7 @@ To be sure the AUTO algorithm finds the right container when calculating the pos
   }}
   args={{
     "--z-popover-theme--surface": "var(--color-surface01)",
-    "--z-popover-theme--text": "var(--color-text01)",
+    "--z-popover-theme--text": "var(--color-default-text)",
   }}
 />
 
