chore: rename icon03 to inverse-icon and icon01 to primary01-icon

--- a/src/components/css-components/z-fab/index.stories.mdx
+++ b/src/components/css-components/z-fab/index.stories.mdx
@@ -18,7 +18,7 @@ Some css custom properties are also available to customize the component:
 - `--z-fab-right-offset`: the right offset of the fab button (Default: `--grid-margin`)
 - `--z-fab-bottom-offset`: the bottom offset of the fab button (Default: `--grid-margin`)
 - `--z-fab-icon-size: the size of the icon (Default: `20px`)
-- `--z-fab-icon-fill`: the fill color of the icon (Default: `--color-icon03`)
+- `--z-fab-icon-fill`: the fill color of the icon (Default: `--color-inverse-icon`)
 
 > NB: for the `extended` and `extendable` versions, always wrap the text of the label with some element (e.g. a `<span>`).
 
