chore: style and code enhancements

--- a/src/components/z-breadcrumb/index.stories.mdx
+++ b/src/components/z-breadcrumb/index.stories.mdx
@@ -58,7 +58,7 @@ import "./style.stories.css";
         <a href="./link1">Lingua inglese - Scuola secondaria di primo grado</a>
         <a href="./link2">Lingua Inglese - Lessico e funzioni linguistiche e comunicative</a>
         <a href="./link3">Il tempo libero e i luoghi del tempo libero</a>
-        <a href="./link4">Chiedere di e descrivere le proprie vacanze</a>
+        <a href="./link4">Chiedere di descrivere le proprie vacanze</a>
       </z-breadcrumb>
     </div>`}
   </Story>
