chore: z-stepper-item / add checked attribute

--- a/src/components/indicators/z-stepper-item/index.stories.mdx
+++ b/src/components/indicators/z-stepper-item/index.stories.mdx
@@ -26,6 +26,13 @@ import "./index";
       >First step</z-stepper-item
     >`}
   </Story>
+  <Story name="Checked">
+    {html`<z-stepper-item
+      index="1"
+      checked
+      >First step</z-stepper-item
+    >`}
+  </Story>
 </Canvas>
 
 <ArgsTable of="z-stepper-item" />
